[gd_scene load_steps=19 format=3 uid="uid://dshuhhh7gh7np"]

[ext_resource type="Texture2D" uid="uid://bit4fvdg640j1" path="res://entities/items/placeable/campfire/object/art/campfire_1.png" id="1_iknff"]
[ext_resource type="Shader" path="res://common/shaders/sprite_outline/sprite_outline.gdshader" id="1_qh18c"]
[ext_resource type="Script" path="res://entities/items/placeable/campfire/object/campfire.gd" id="1_w1jlw"]
[ext_resource type="Texture2D" uid="uid://vspbxk2tsc2k" path="res://entities/items/placeable/campfire/object/art/campfire_3.png" id="2_yivcm"]
[ext_resource type="Texture2D" uid="uid://ch0dlfrxgqatt" path="res://entities/items/placeable/campfire/object/art/campfire_2.png" id="3_sod2h"]
[ext_resource type="Texture2D" uid="uid://dwa7tklcp2oke" path="res://entities/items/placeable/campfire/object/art/campfire_4.png" id="4_x1jsd"]
[ext_resource type="Texture2D" uid="uid://b2xc6xcscm17p" path="res://assets/art/light_textures/neutral_point_light_texture.webp" id="6_wiv7e"]
[ext_resource type="Script" path="res://common/components/hitbox/hitbox_component.gd" id="8_0b3jn"]
[ext_resource type="Script" path="res://common/components/health/health_component.gd" id="9_am1xl"]
[ext_resource type="PackedScene" uid="uid://ctoesqspj385y" path="res://common/components/chunk_node_helper/chunk_node_helper.tscn" id="10_t67g1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4act"]
shader = ExtResource("1_qh18c")
shader_parameter/outline_color = null

[sub_resource type="SpriteFrames" id="SpriteFrames_sbln1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_iknff")
}, {
"duration": 1.0,
"texture": ExtResource("2_yivcm")
}, {
"duration": 1.0,
"texture": ExtResource("3_sod2h")
}, {
"duration": 1.0,
"texture": ExtResource("4_x1jsd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukdro"]
size = Vector2(21, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x36dn"]
size = Vector2(10, 11)

[sub_resource type="Animation" id="Animation_w7p65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_e3x26"]
resource_name = "spawn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_shl3x"]
_data = {
"RESET": SubResource("Animation_w7p65"),
"spawn": SubResource("Animation_e3x26")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5afu"]
size = Vector2(21, 14)

[node name="Campfire" type="StaticBody2D"]
script = ExtResource("1_w1jlw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_c4act")
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_sbln1")
frame_progress = 0.725306

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.75, 0.5, 1)
energy = 0.65
texture = ExtResource("6_wiv7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 11)
shape = SubResource("RectangleShape2D_ukdro")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_x36dn")

[node name="HurtTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_shl3x")
}

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("8_0b3jn")
health_component = NodePath("../HealthComponent")
type = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0.5, 8)
shape = SubResource("RectangleShape2D_o5afu")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("9_am1xl")
MAX_HEALTH = 5.0

[node name="ChunkNodeHelper" parent="." instance=ExtResource("10_t67g1")]

[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
